// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component.IsHovering should update render prop when mouse hovers 1`] = `
<Component>
  <IsHovering
    className="outer"
    el="div"
    render={[Function]}
  >
    <div
      className="outer"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="inner"
        style={
          Object {
            "color": "black",
          }
        }
      />
    </div>
  </IsHovering>
</Component>
`;

exports[`Component.IsHovering should update render prop when mouse hovers 2`] = `
<Component>
  <IsHovering
    className="outer"
    el="div"
    render={[Function]}
  >
    <div
      className="outer"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="inner"
        style={
          Object {
            "color": "red",
          }
        }
      />
    </div>
  </IsHovering>
</Component>
`;
